* Tue Mar 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.5-0
- Added support for OEL and Puppet 5

* Tue Nov 28 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 1.0.4-0
- 1.0.3 was tagged, bumping to 1.0.4
- Fix addresses https://github.com/onyxpoint/puppet-gpasswd/issues/7
- Before this fix, users could not specify groups in the system
  GID range, SYS_GID_[MAX,MIN] in /etc/login.defs. Added system_groups
  feature to gpasswd.
- Added beaker tests to ensure groups can be created within the system range.

* Sun May 21 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.2-0
  - Fixed README typos
  - Cleaned up code
  - Added acceptance tests
  - Added support for `auth_membership`
  - Fixed code regression from d49cf32
    - Thanks for the notification from John Warburton
  - Validated noop message was correct
  - Fixed sort order when checking user lists against the system

* Fri Feb 17 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.1-0
- Fixed Gemfile

* Fri Jul 29 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-0
- Validate compliance_markup mapping

* Thu Feb 12 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-0
- Migrated to the simp environment

* Wed Apr 23 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-0
- First RPM build